--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     }
   </style>
 
-  <video autoplay muted>
+  <video autoplay loop muted>
     <source src="media/logo-square.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video> 
