--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
   </script>
 
 <footer>
+  <p style="color: rgb(73, 73, 73); margin-top: 15em;">Firefox on Mobile is not fully supported.</p>
 </footer>
 
 </body>
